Fix sponsors height on mobile

--- a/source/stylesheets/modules/_sponsors.scss
+++ b/source/stylesheets/modules/_sponsors.scss
@@ -1,12 +1,3 @@
 .sponsor {
   @include span-columns(6);
-  height: 200px;
-  .helper {
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-  }
-  img {
-    vertical-align: middle;
-  }
 }
